2002-06-17	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* include/Makefile.am: Include $(top_srcdir)/../automake/*.am.
	* Makefile.am: Include $(top_srcdir)/../automake/*.am.
	Use ../aclocal.
	* inline/Makefile.am: Include $(top_srcdir)/../automake/*.am.
	* macros/Makefile.am: Include $(top_srcdir)/../automake/*.am.
	* src/Makefile.am: Include $(top_srcdir)/../automake/*.am.

2001-05-17	Joel Sherrill <joel@OARcorp.com>

	* macros/rtems/posix/mqueue.inl: Implemented missing routines
	to support message queue FDs.

2002-05-03	Ralf Corsepius <corsepiu@faw.uni-ulm.de>	

	* include/sys/utsname.h: Remove.
	* include/Makefile.am: Reflect changes above.
	* src/utsname.c: Remove.
	* src/Makefile.am: Reflect changes above.

2001-04-26	Joel Sherrill <joel@OARcorp.com>

	* include/rtems/posix/mqueue.h, inline/rtems/posix/mqueue.inl,
	src/mqueue.c, src/mqueueclose.c, src/mqueuecreatesupp.c,
	src/mqueuegetattr.c, src/mqueuenotify.c, src/mqueueopen.c,
	src/mqueuerecvsupp.c, src/mqueuesendsupp.c, src/mqueuesetattr.c:
	Per PR81 reworked to add a message queue descriptor separate from
	the underlying message queue.  This allows non-blocking to follow
	the "open" not the underlying queue.
 
2002-04-06	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* src/psignal.c: Include <stdlib.h>.

2002-04-08	Chris Johns <ccj@acm.org>

	* Per PR142, make task switch extension its own list.
	* src/pthread.c (_POSIX_Threads_User_extensions): Reflect above.

2002-04-02	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* src/getegid.c: Remove <errno.h>.
	* src/geteuid.c: Ditto.
	* src/getgid.c: Ditto.
	* src/getuid.c: Ditto.
	* src/getlogin.c: Move <errno.h>.

2002-03-27	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac:
	AC_INIT(package,_RTEMS_VERSION,_RTEMS_BUGS).
	AM_INIT_AUTOMAKE([no-define foreign 1.6]).
	* src/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* Makefile.am: Remove AUTOMAKE_OPTIONS.
	* include/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* inline/Makefile.am: Remove AUTOMAKE_OPTIONS.