@@ -1,3 +1,8 @@
+2002-06-26	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
+
+	* configure.ac: Remove references to RTEMS_BSP.
+	* src/Makefile.am: Add libposix.a.
+
 2002-06-17	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
 
 	* include/Makefile.am: Include $(top_srcdir)/../automake/*.am.
